--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Satellite Viewer</title>
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Orelega+One&family=Roboto:wght@400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="container-fluid">
 
     <div class="content">
 
@@ -26,21 +29,25 @@
             </div>
             <div class="row">
                 <label>Mapbox API Key</label>
-                <input id="api-key" />
+                <input id="api-key" placeholder="Enter your API key here"/>
             </div>
             <div class="row">
                 <label>Address</label>
-                <input id="address" />
+                <input id="address" placeholder="e.g.: 123 Main St Boston MA 02111"/>
             </div>
             <div class="row">
                 <label>Satellite NORAD</label>
-                <input id="norad" />
+                <input id="norad" placeholder="See Satellite IDs below"/>
             </div>
             <div class="row">
                 <button id="search">
                     Search
                 </button>
             </div>
+        </div>
+
+        <div class="section" id="results">
+
         </div>
 
         <div class="section">
@@ -87,6 +94,7 @@
         </div>
 
     </div>
+</div>
 
     <script src="apiKey.js"></script>
     <script src="main.js"></script>
